# airflow-conda-operator

./: .gitignore  README.md  pyproject.toml  setup.cfg
airflow_conda_operator/: __init__.py  conda_operator.py  conda_task.py
airflow_conda_operator/templates/: conda_python_env.sh
airflow_conda_operator/tests/: test_operators.py  test_utils.py
airflow_conda_operator/utils/: conda_envs.py
