# make this a pyproj.toml
# from setuptools import setup, find_packages

[metadata]
name = airflow-conda-operator
version = 0.1.0
author = Achim Gädke
author_email = Achim.Gaedke@lynker-analytics.com
description = Conda/Mamba Python Operator
long_description = file: README.md

[options]
packages = find:
install_requires =
    apache-airflow>=2.8.0
    jinja2

[options.package_data]
airflow_conda_operator =
    templates/*.sh
